FIX: Dark mode issues

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,7 @@
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
---vt-c-black: #24292F;
+  --vt-c-black: #24292f;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
